Closed Bug 1952284 Opened 1 year ago Closed 1 year ago

Double-click to make youtube videos full-screen still shows the Windows Taskbar

Categories

(Core :: Widget: Win32, defect)

defect

Tracking

()

RESOLVED FIXED
138 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox136 --- unaffected
firefox137 --- unaffected
firefox138 --- fixed

People

(Reporter: mayankleoboy1, Assigned: rkraesig)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Create a fresh profile
Go to https://www.youtube.com/watch?v=OQBR6iGC4HE
Double-click on the video to make it full-screen

AR: the Windows taskbar is still visible
ER: Not so

Bisection:
Bug 1950441 - mark windows as (not) fullscreen via different mechanism r=win-reviewers,handyman

As noted in bug 1949079, Windows appears to detect maximized windows
with custom titlebars as "full screen", and hides the taskbar behind
them when autohide is enabled. (This appears to have been due to a
recent change to their explicitly undocumented heuristics, but we may
also have triggered it somehow with the recent-ish refactor of the
custom non-client area.)

To avert this, resurrect another mechanism to mark windows as
fullscreen: "NonRudeHWND". This was previously believed -- perhaps
correctly, at the time -- to be unusable on Windows 10; but recent
testing shows that it does work, even in several of the cases where
the existing mechanism fails.

Just in case it doesn't and I was right the first time, guard this
behind a pref and allow users to switch back to the flaky mechanism.

Differential Revision: https://phabricator.services.mozilla.com/D239658

2025-03-06T22:18:26.114000: DEBUG : Did not find a branch, checking all integration branches
2025-03-06T22:18:26.128000: INFO : The bisection is done.
2025-03-06T22:18:26.130000: INFO : Stopped

Attached file about:support

widget.windows.fullscreen_marking_method = 0 by default for me.

widget.windows.fullscreen_marking_method = 0 -> Bad
widget.windows.fullscreen_marking_method = 1 -> Bad
widget.windows.fullscreen_marking_method = 2 -> Good
widget.windows.fullscreen_marking_method = 3 -> Good

Flags: needinfo?(rkraesig)

Set release status flags based on info from the regressing bug 1950441

Well... nuts.

At least using both mechanisms at once works. I'll adjust the default behavior to be 3 instead of 1, I suppose.

Flags: needinfo?(rkraesig)
Summary: Double-click to maximize youtube videos still shows the Windows Taskbar → Double-click to make youtube videos full-screen still shows the Windows Taskbar

... given that "NonRudeHWND" alone seems to be insufficient.

Assignee: nobody → rkraesig
Status: NEW → ASSIGNED
Pushed by rkraesig@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6a64330a7e5f use both methods of marking a window as fullscreen r=win-reviewers,handyman
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch

@cyfare: This bug's patch should have fixed the issue you mentioned in bug 1411791.

If updating Nightly again doesn't fix it, can you try experimenting with the setting named in comment 3 and report (in this bug) what the behavior is for each of {0,1,2,3}?

(Edited to fix a context error: 'that' → 'this'.)

Flags: needinfo?(security)

(In reply to Ray Kraesig [:rkraesig] from comment #9)

@cyfare: This bug's patch should have fixed the issue you mentioned in bug 1411791.

If updating Nightly again doesn't fix it, can you try experimenting with the setting named in comment 3 and report (in this bug) what the behavior is for each of {0,1,2,3}?

(Edited to fix a context error: 'that' → 'this'.)

Thanks for the reply. This bug patch didn't fix the issue, however the following about:config settings fixed it: https://github.com/CYFARE/HellFire/issues/13#issuecomment-2707915761

Both the issues were fixed:

  1. Windows taskbar visible after fullscreening youtube video
  2. Video not fullscreening on direct video link access
Flags: needinfo?(security)
See Also: → 1957069
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: