Bug 1952284 - use both methods of marking a window as fullscreen  r=win-reviewers,handyman

... given that "NonRudeHWND" alone seems to be insufficient.

Differential Revision: https://phabricator.services.mozilla.com/D240663